force-app/main/default/objects/Dummy30__c/Dummy30__c.object-meta.xml
<CustomObject>
    <label>Dummy30</label>
    <nameField>
        <label>Dummy30 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy30</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>