force-app/main/default/objects/Dummy30__c/fields/FooBar004__c.field-meta.xml
<CustomField>
    <fullName>FooBar004__c</fullName>
    <label>FooBar004</label>
    <length>255</length>
    <type>Text</type>
</CustomField>