force-app/main/default/objects/Dummy30__c/fields/FooBar024__c.field-meta.xml
<CustomField>
    <fullName>FooBar024__c</fullName>
    <label>FooBar024</label>
    <length>255</length>
    <type>Text</type>
</CustomField>