force-app/main/default/objects/Dummy30__c/fields/FooBar043__c.field-meta.xml
<CustomField>
    <fullName>FooBar043__c</fullName>
    <label>FooBar043</label>
    <length>255</length>
    <type>Text</type>
</CustomField>